# hw_python_oop

./: .pre-commit-config.yaml  README.md  homework.py  pyproject.toml  requirements.txt  setup.cfg
tests/: conftest.py  test_homework.py
